--- a/scss/_single.scss
+++ b/scss/_single.scss
@@ -41,6 +41,7 @@
 
             a {
                 text-decoration: none;
+                color: var(--blogtube_font_color);
             }
 
             img {
@@ -81,6 +82,17 @@
 
     .blogtube_post_footer {
         width: 100%;
+    }
+
+    .blogtube_post_tags {
+        font-size: 1.2rem;
+        ul {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            gap: 0.5em;
+            list-style: none;
+        }
     }
 
     .blogtube_authorbox {
@@ -157,10 +169,11 @@
     }
 
     .blogtube_post_pagination {
-        font-size: 1.2rem;
+        font-size: 1.4rem;
         display: flex;
         flex-wrap: wrap;
         gap: 0.2em;
+        padding: 0 1em;
     
         a {
             font-size: clamp(0.8em, 2vw, 1em);
