--- a/scss/_page.scss
+++ b/scss/_page.scss
@@ -10,4 +10,8 @@
         padding-left: clamp(0em, 2vw, 1.2em);
         max-width: 100em;
     }
+
+    .blogtube_content_spacer {
+        align-items: unset;
+    }
 }
