--- a/scss/_single.scss
+++ b/scss/_single.scss
@@ -11,6 +11,10 @@
         max-width: 100em;
     }
 
+    .blogtube_content_spacer {
+        align-items: unset;
+    }
+
     .blogtube_hero {
         width: 100%;
 
@@ -20,10 +24,11 @@
             border-radius: 12px;
             width: 100%;
             max-height: 703px;
+            object-fit: cover;
         }
 
         h1 {
-            font-size: 2rem;
+            font-size: 2.5rem;
             font-weight: 700;
             line-height: 2.8rem;
             white-space: normal;
@@ -49,6 +54,15 @@
                 width: 40px;
                 border-radius: 5em;
             }
+
+            div {
+                display: flex;
+                flex-direction: column;
+            }
+
+            .blogtube_date {
+                font-weight: initial;
+            }
         }
 
         .blogtube_metadata_box {
@@ -58,14 +72,13 @@
             border-radius: 12px;
             font-size: 1.4rem;
 
-            .blogtube_date {
-                font-weight: 800;
-            }
-
             .blogtube_categorie_list {
                 ul {
                     padding: 0;
                     margin: 0.2em 0;
+                    display: flex;
+                    gap: 0.5em;
+                    flex-wrap: wrap;
 
                     li {
                         list-style: none;
@@ -86,12 +99,14 @@
 
     .blogtube_post_tags {
         font-size: 1.2rem;
+
         ul {
             margin: 0;
             padding: 0;
             display: flex;
             gap: 0.5em;
             list-style: none;
+            flex-wrap: wrap;
         }
     }
 
@@ -103,19 +118,19 @@
         background-color: #212121;
         border-radius: 16px;
         font-size: 1.2rem;
-    
+
         .blogtube_author_avatar {
             flex: 1 0 auto;
             display: flex;
             margin: 0 auto;
-    
+
             a {
                 width: 100%;
                 height: 100%;
                 display: flex;
                 justify-content: center;
                 align-items: center;
-    
+
                 img {
                     width: 100%;
                     height: 100%;
@@ -125,23 +140,23 @@
                 }
             }
         }
-    
+
         .blogtube_author_details {
             flex: 100 0 60%;
             padding: 3%;
-    
+
             .blogtube_author_name_row {
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
-    
+
                 h3 a {
                     text-decoration: none;
                     font-size: 1.5em;
                     color: var(--blogtube_font_color);
                 }
-    
-                h3 + a{
+
+                h3+a {
                     padding: 0.5em;
                     width: 1em;
                     height: 1em;
@@ -150,19 +165,19 @@
                     align-items: center;
                     text-decoration: none;
                     color: var(--blogtube_font_color);
-    
+
                     &:hover {
                         border-radius: 5em;
                         background-color: var(--blogtube_primary_color);
                     }
                 }
             }
-    
+
             p {
                 filter: brightness(0.9);
             }
         }
-    
+
         &:hover {
             background-color: #292929;
         }
@@ -174,15 +189,15 @@
         flex-wrap: wrap;
         gap: 0.2em;
         padding: 0 1em;
-    
+
         a {
             font-size: clamp(0.8em, 2vw, 1em);
         }
-    
+
         .blogtube_post_pagination_prev {
             margin-right: auto;
         }
-    
+
         .blogtube_post_pagination_next {
             margin-left: auto;
         }
