--- a/scss/_comments.scss
+++ b/scss/_comments.scss
@@ -1,18 +1,4 @@
 #comments {    
-    input:not([type="submit"], [type="checkbox"]), textarea {
-        border-radius: 4px 4px 0 0;
-        padding: 1em 0.5em;
-
-        &:focus {
-            border-bottom: 1px solid var(--blogtube_primary_variant_much_brighter);
-        }
-
-        &:hover {
-            background-color: #141414;
-            box-shadow: 0 0 0px 1000px #141414 inset;
-        }
-    }
-
     .says {
         display: none;
     }
@@ -36,7 +22,7 @@
         color: rgb(177, 177, 177);
     }
 
-    .comment, .children, .pingback  {
+    .comment, .children, .pingback, .trackback  {
         list-style: none;
         padding: 1% 2%;
 
