--- a/style.css
+++ b/style.css
@@ -100,17 +100,6 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
   font-size: 5rem;
 }
 
-#comments input:not([type=submit], [type=checkbox]), #comments textarea {
-  border-radius: 4px 4px 0 0;
-  padding: 1em 0.5em;
-}
-#comments input:not([type=submit], [type=checkbox]):focus, #comments textarea:focus {
-  border-bottom: 1px solid var(--blogtube_primary_variant_much_brighter);
-}
-#comments input:not([type=submit], [type=checkbox]):hover, #comments textarea:hover {
-  background-color: #141414;
-  box-shadow: 0 0 0px 1000px #141414 inset;
-}
 #comments .says {
   display: none;
 }
@@ -129,14 +118,14 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 #comments a {
   color: rgb(177, 177, 177);
 }
-#comments .comment, #comments .children, #comments .pingback {
+#comments .comment, #comments .children, #comments .pingback, #comments .trackback {
   list-style: none;
   padding: 1% 2%;
 }
-#comments .comment li, #comments .children li, #comments .pingback li {
+#comments .comment li, #comments .children li, #comments .pingback li, #comments .trackback li {
   border-radius: 4px;
 }
-#comments .comment li ol, #comments .children li ol, #comments .pingback li ol {
+#comments .comment li ol, #comments .children li ol, #comments .pingback li ol, #comments .trackback li ol {
   padding-left: 0.5em;
 }
 #comments .comment-form {
@@ -543,6 +532,9 @@ body.admin-bar #blogtube_sidemenu .blogtube_sidebar_content {
   padding-left: clamp(0em, 2vw, 1.2em);
   max-width: 100em;
 }
+.page-template-default .blogtube_content_spacer {
+  align-items: unset;
+}
 
 /*
     Contains a uniform style for all pagination: feed, post, author page, search, wp-blocks.
@@ -651,6 +643,9 @@ body.admin-bar #blogtube_sidemenu .blogtube_sidebar_content {
   padding-left: clamp(0em, 2vw, 1.2em);
   max-width: 100em;
 }
+.single .blogtube_content_spacer {
+  align-items: unset;
+}
 .single .blogtube_hero {
   width: 100%;
 }
@@ -660,9 +655,11 @@ body.admin-bar #blogtube_sidemenu .blogtube_sidebar_content {
   border-radius: 12px;
   width: 100%;
   max-height: 703px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .single .blogtube_hero h1 {
-  font-size: 2rem;
+  font-size: 2.5rem;
   font-weight: 700;
   line-height: 2.8rem;
   white-space: normal;
@@ -686,6 +683,13 @@ body.admin-bar #blogtube_sidemenu .blogtube_sidebar_content {
   width: 40px;
   border-radius: 5em;
 }
+.single .blogtube_hero .blogtube_hero_author_row div {
+  display: flex;
+  flex-direction: column;
+}
+.single .blogtube_hero .blogtube_hero_author_row .blogtube_date {
+  font-weight: initial;
+}
 .single .blogtube_hero .blogtube_metadata_box {
   background-color: rgba(255, 255, 255, 0.1019607843);
   margin: 12px 12px 0 0;
@@ -693,12 +697,12 @@ body.admin-bar #blogtube_sidemenu .blogtube_sidebar_content {
   border-radius: 12px;
   font-size: 1.4rem;
 }
-.single .blogtube_hero .blogtube_metadata_box .blogtube_date {
-  font-weight: 800;
-}
 .single .blogtube_hero .blogtube_metadata_box .blogtube_categorie_list ul {
   padding: 0;
   margin: 0.2em 0;
+  display: flex;
+  gap: 0.5em;
+  flex-wrap: wrap;
 }
 .single .blogtube_hero .blogtube_metadata_box .blogtube_categorie_list ul li {
   list-style: none;
@@ -719,6 +723,7 @@ body.admin-bar #blogtube_sidemenu .blogtube_sidebar_content {
   display: flex;
   gap: 0.5em;
   list-style: none;
+  flex-wrap: wrap;
 }
 .single .blogtube_authorbox {
   display: flex;
@@ -817,19 +822,6 @@ body.admin-bar #blogtube_sidemenu .blogtube_sidebar_content {
 }
 .widget img {
   height: auto;
-}
-.widget select {
-  background-color: unset;
-  color: var(--blogtube_font_color);
-  border-radius: 5px;
-  cursor: pointer;
-  max-width: 100%;
-}
-.widget select option {
-  background-color: black;
-}
-.widget select:hover {
-  background-color: rgb(66, 66, 66);
 }
 
 .wp-block-post-author {
@@ -1405,7 +1397,7 @@ img:hover {
 
 .blogtube_user_content_container {
   min-height: 70vh;
-  margin: 2em 0;
+  margin: 1em 0;
   padding: 0 clamp(0.5rem, 2vw, 1rem);
   overflow: hidden;
   font-size: 1.4rem;
@@ -1509,11 +1501,37 @@ textarea:-webkit-autofill:focus {
   outline: none;
 }
 
+input:not([type=submit], [type=checkbox]), textarea {
+  border-radius: 4px 4px 0 0;
+  padding: 1em 0.5em;
+}
+input:not([type=submit], [type=checkbox]):focus, textarea:focus {
+  border-bottom: 1px solid var(--blogtube_primary_variant_much_brighter);
+}
+input:not([type=submit], [type=checkbox]):hover, textarea:hover {
+  background-color: #141414;
+  box-shadow: 0 0 0px 1000px #141414 inset;
+}
+
+select {
+  background-color: unset;
+  color: var(--blogtube_font_color);
+  border-radius: 5px;
+  cursor: pointer;
+  max-width: 100%;
+}
+select option {
+  background-color: black;
+}
+select:hover {
+  background-color: rgb(66, 66, 66);
+}
+
 .gallery {
   display: grid;
 }
 .gallery .gallery-item {
-  font-size: 0.8em;
+  font-size: 1em;
   overflow: hidden;
 }
 .gallery .gallery-item img {
@@ -1642,4 +1660,36 @@ textarea:-webkit-autofill:focus {
   display: flex;
   flex-direction: column;
   grid-area: landingpagesection;
+}
+
+.post-password-form {
+  border-radius: 12px;
+  background-color: rgb(112, 0, 0);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 1em;
+}
+.post-password-form p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 0.5em;
+}
+.post-password-form input[type=submit] {
+  border-radius: 4px;
+  padding: 0.8em 1.2em;
+  background-color: black;
+  border: solid 1px gray;
+  white-space: nowrap;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  text-decoration: none;
+  color: rgb(177, 177, 177);
+  cursor: pointer;
+}
+.post-password-form input[type=submit]:hover {
+  background-color: rgb(41, 41, 41);
 }/*# sourceMappingURL=style.css.map */
