--- a/style.css
+++ b/style.css
@@ -374,6 +374,14 @@ body.admin-bar #blogtube_header {
   width: auto;
 }
 
+.blogtube_sidemenu_open #blogtube_sidemenu_closing_div {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  right: 0;
+}
+
 #blogtube_sidemenu {
   position: fixed;
   left: 0;
@@ -389,6 +397,7 @@ body.admin-bar #blogtube_header {
   display: flex;
   flex-direction: column;
   font-size: 1.4rem;
+  z-index: 1;
 }
 #blogtube_sidemenu a {
   color: var(--blogtube_font_color);
@@ -644,7 +653,6 @@ body.admin-bar #blogtube_sidemenu .blogtube_sidebar_content {
 }
 .single main {
   margin-top: 0;
-  padding-left: clamp(0em, 2vw, 1.2em);
   max-width: 90em;
 }
 @media only screen and (min-width: 1000px) {
@@ -1326,6 +1334,7 @@ blockquote {
 @media only screen and (max-width: 960px) {
   #blogtube_sidebar {
     max-width: 100%;
+    padding: 0;
   }
 }
 
@@ -1364,6 +1373,7 @@ main {
   align-items: center;
   margin-top: 6em;
   margin-bottom: 2em;
+  padding: 0 clamp(1em, 2vw, 2em);
 }
 
 @media only screen and (min-width: 600px) {
