--- a/style.scss
+++ b/style.scss
@@ -64,6 +64,7 @@ main {
     align-items: center;
     margin-top: 6em;
     margin-bottom: 2em;
+    padding: 0 clamp(1em, 2vw, 2em);
 }
 
 @media only screen and (min-width: 600px) {
