--- a/style.css
+++ b/style.css
@@ -374,14 +374,15 @@ body.admin-bar #blogtube_header {
   width: auto;
 }
 
-.blogtube_sidemenu_open #blogtube_sidemenu_closing_div {
-  position: fixed;
-  width: 100vw;
-  height: 100vh;
-  top: 0;
-  right: 0;
+@media only screen and (max-width: 600px) {
+  .blogtube_sidemenu_open #blogtube_sidemenu_closing_div {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    right: 0;
+  }
 }
-
 #blogtube_sidemenu {
   position: fixed;
   left: 0;
