--- a/style.scss
+++ b/style.scss
@@ -16,7 +16,7 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 @use 'scss/fonts.scss' as *;
 @use 'scss/mixins' as *;
 @use 'scss/404' as *;
-// @use 'scss/archive' as *;
+@use 'scss/archive' as *;
 @use 'scss/comments' as *;
 @use 'scss/footer' as *;
 @use 'scss/header' as *;
